Fixed a whitespace issues between the points table and the scrollbar

--- a/_sass/_points.scss
+++ b/_sass/_points.scss
@@ -14,6 +14,7 @@
 
 .points-table {
     font-size: 14px;
+    margin: 0;
 }
 
 #ErrorMessage {
